--- a/src/app/home/profile-table/profile-table.component.html
+++ b/src/app/home/profile-table/profile-table.component.html
@@ -257,7 +257,7 @@
       <option value="TIPAZ">TIPAZ</option>
     </select>
 
-    <label for="fromDate">FromDate:</label>
+    <label for="fromDate">From Date:</label>
     <input
       type="date"
       id="fromDate"
@@ -266,7 +266,7 @@
       (input)="filterRecords()"
     />
 
-    <label for="toDate">ToDate:</label>
+    <label for="toDate">To Date:</label>
     <input
       type="date"
       id="toDate"
@@ -275,7 +275,7 @@
       (input)="filterRecords()"
     />
 
-    <button (click)="clearFilters()">Clear_Filters</button>
+    <button (click)="clearFilters()">Clear Filters</button>
 
     <button (click)="downloadChildData()">
       <i class="fa fa-download"></i>Download
@@ -296,7 +296,7 @@
                 <th>First Name</th>
                 <th>Middle Name</th>
                 <th>Last Name</th>
-                <th>Birthday (dd/mm/yyyy)</th>
+                <th>Birthday</th>
                 <th>Address</th>
                 <th>Barangay</th>
                 <th>Father's Name</th>
