--- a/src/app/home/bmi-result/bmi-result.component.html
+++ b/src/app/home/bmi-result/bmi-result.component.html
@@ -74,7 +74,7 @@
       <option value="TIPAZ">TIPAZ</option>
     </select>
 
-    <label for="fromDate">FromDate:</label>
+    <label for="fromDate">From Date:</label>
     <input
       type="date"
       id="fromDate"
@@ -83,7 +83,7 @@
       (input)="filterRecords()"
     />
 
-    <label for="toDate">ToDate:</label>
+    <label for="toDate">To Date:</label>
     <input
       type="date"
       id="toDate"
@@ -92,7 +92,7 @@
       (input)="filterRecords()"
     />
 
-    <label for="measurementMonth">Measurement Month:</label>
+    <label for="measurementMonth">Month Measured:</label>
     <select
       id="measurementMonth"
       name="measurementMonth"
@@ -122,7 +122,7 @@
   <div>
     <div class="result-container">
       <fieldset id="BMI">
-        <legend><h3>RESULT TABLE</h3></legend>
+        <legend>RESULT TABLE</legend>
         <div class="result-table">
           <table>
             <thead>
@@ -164,7 +164,6 @@
                 <td>{{ result.bmi }}</td>
                 <td>{{ result.resultMessage }}</td>
                 <td>{{ result.Date | date : "medium" : "Asia/Manila" }}</td>
-
                 <td>
                   <button
                     (click)="removeBmi(result)"
