--- a/src/app/home/monthly-records-infant/monthly-records-infant.component.html
+++ b/src/app/home/monthly-records-infant/monthly-records-infant.component.html
@@ -77,7 +77,7 @@
       <option value="TIPAZ">TIPAZ</option>
     </select>
 
-    <label for="fromDate">FromDate:</label>
+    <label for="fromDate">From Date:</label>
     <input
       type="date"
       id="fromDate"
@@ -86,7 +86,7 @@
       (input)="filterRecords()"
     />
 
-    <label for="toDate">ToDate:</label>
+    <label for="toDate">To Date:</label>
     <input
       type="date"
       id="toDate"
@@ -94,7 +94,7 @@
       [(ngModel)]="toDate"
       (input)="filterRecords()"
     />
-    <label for="measurementMonth">Measurement Month:</label>
+    <label for="measurementMonth">Month Measured:</label>
     <select
       id="measurementMonth"
       name="measurementMonth"
@@ -116,7 +116,7 @@
       <option value="11">December</option>
     </select>
 
-    <button (click)="clearFilters()">Clear_Filters</button>
+    <button (click)="clearFilters()">Clear Filters</button>
 
     <button (click)="downloadChildData()">
       <i class="fa fa-download"></i>Download
@@ -135,7 +135,7 @@
             <tr>
               <th>Monthly ID</th>
               <th>Name of Child</th>
-              <th>Birthday (dd/mm/yyyy)</th>
+              <th>Birthday</th>
               <th>Age (months)</th>
               <th>Measurements</th>
               <th>Nutritional Status</th>
@@ -165,7 +165,7 @@
                   </li>
                   <li>
                     <strong>W/L/H:</strong>
-                    {{ record.bmiData }}
+                    {{ record.bmiData | number:'1.2-2' }}
                   </li>
                 </ul>
               </td>
