--- a/src/app/home/nutritional-table/nutritional-table.component.css
+++ b/src/app/home/nutritional-table/nutritional-table.component.css
@@ -85,6 +85,13 @@ legend {
   font-weight: bold;
 }
 
+.result-container {
+  max-width: 1200px;
+  margin: 20px auto;
+  padding: 10px;
+  border: none;
+}
+
 .result-table table {
   width: 100%;
   border-collapse: collapse;
@@ -217,4 +224,131 @@ legend {
 
 .pagination button:hover {
   background-color: #b0d9b1;
+}
+
+@media (max-width: 768px) {
+  input[type="text"],
+  input[type="date"],
+  input[type="number"],
+  select {
+    width: 100%;
+    padding: 5px;
+    font-size: 5px;
+    border-radius: 4px;
+  }
+
+  fieldset input[type="text"],
+  fieldset input[type="date"],
+  fieldset input[type="number"],
+  select {
+    width: 100%;
+    padding: 5px;
+    font-size: 5px;
+    border-radius: 4px;
+  }
+
+  fieldset {
+    max-width: 50px;
+    border-style: hidden;
+  }
+
+  .fieldset1 {
+    font-size: 13px;
+  }
+
+  #monthlyWeightRecords {
+    padding: 5px;
+    margin-top: 10px;
+  }
+
+  #monthlyWeightRecords legend {
+    font-size: 60%;
+  }
+
+  .result-container {
+    max-width: 400px;
+    margin: 10px auto;
+    padding: 10px;
+    border: none;
+  }
+
+  .result-table table {
+    border-collapse: collapse;
+    font-size: 5%;
+  }
+
+  .result-table th,
+  .result-table td {
+    max-width: 30px;
+    font-size: 5px;
+    font-weight: normal;
+  }
+
+  .result-table p {
+    margin: 15px 0;
+    font-style: italic;
+    font-weight: bold;
+    color: #999;
+  }
+
+  .result-table th {
+    background-color: #f2f2f2;
+    font-weight: lighter;
+    font-weight: bold;
+  }
+
+  button {
+    font-size: 3px;
+    padding: 0px 0px;
+  }
+
+  .filter-container label {
+    max-width: 50px;
+    font-size: 6px;
+  }
+
+  .filter-container input[type="date"],
+  .filter-container input[type="text"],
+  .filter-container input[type="number"],
+  .filter-container select {
+    font-size: 10px;
+    width: 100%;
+  }
+
+  .filter-container button {
+    font-size: 6px;
+    max-width: 50px;
+    padding: 0px 5px;
+  }
+
+  .pagination {
+    font-size: 15px;
+  }
+
+  .pagination Button {
+    font-size: 10px;
+    padding: 5px 23px;
+  }
+
+  #updateCon {
+    padding: 10px;
+    font-size: 10px;
+    left: 50%;
+    top: 140%;
+  }
+
+  #updateCon Button {
+    font-size: 10px;
+    padding: 0px 5px;
+  }
+
+  .legend1 {
+    font-size: 10px;
+    margin-bottom: 10px;
+  }
+
+  legend {
+    font-size: 10px;
+    margin-bottom: 10px;
+  }
 }
